[project]
name = "llama-index"
version = "0.1.0"
description = "llama-index vector_stores GaussVector integration"
authors = [
    {name = "w00840157"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "sqlalchemy (>=1.4,<=3)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "llama-index-core (>=0.10.1,<0.15)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
